<resources>
    <string name="app_name">Movies</string>
    <string name="movie_info">Movie Info</string>
    <string name="movie_title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="overview">Overview</string>
    <string name="connection_problem">Connection Problem!</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_poster_image">Movie Poster Image</string>
    <string name="trailer">Trailer</string>
    <string name="related_movies">Related Movies</string>
    <string name="cast_s_photo">Cast\'s Photo</string>
    <string name="not_available">Not available</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="birthday">Birthday:</string>
    <string name="deathday">Deathday:</string>
    <string name="starred_in_movies">Starred in movies</string>
</resources>
