<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="movieDetailViewModel"
            type="com.nariman.movies.moviedetails.MovieDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Theme.MaterialComponents.Light.DarkActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layoutAnimation="@anim/layout_animation">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp">

                <ImageView
                    android:id="@+id/moviePoster"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    app:imageUrl="@{ movieDetailViewModel.movieDetails.posterPath }"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{ movieDetailViewModel.movieDetails.title}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/subTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="italic"
                        android:visibility="@{movieDetailViewModel.movieDetails.tagline.length() != 0 ? View.GONE : View.VISIBLE}"
                        tools:text="One for All, All for One" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/movie_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold"
                    tools:text="Movie Info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/release_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold"
                        tools:text="Release date" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{ movieDetailViewModel.movieDetails.releaseDate }"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        tools:text="15.10.2018" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/rating"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold"
                        tools:text="Rating" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{ String.valueOf(movieDetailViewModel.movieDetails.rating) }"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        tools:text="7.8" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/runtime"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold"
                        tools:text="Runtime" />

                    <TextView
                        android:id="@+id/runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{ String.valueOf(movieDetailViewModel.movieDetails.runtime)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        tools:text="2.5 hr" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/budget"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold"
                        tools:text="Budget" />

                    <TextView
                        android:id="@+id/budget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{ String.valueOf(movieDetailViewModel.movieDetails.budget)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        tools:text="$ 120.000.000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/revenue"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold"
                        tools:text="Revenue" />

                    <TextView
                        android:id="@+id/revenue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(movieDetailViewModel.movieDetails.revenue)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        tools:text="$ 500.000.000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{movieDetailViewModel.movieDetails.overview}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryTextColor"
                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>